--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -11,21 +11,21 @@ description: |
 
 dependency: texinfo
 
-in:
+var:
   version: 1.34
 
 provision:
   - url:
-      from: https://ftp.gnu.org/gnu/tar/tar-{% version %}.tar.xz
-      todir: "{% xbeeSrc %}"
+      from: https://ftp.gnu.org/gnu/tar/tar-{{ .version }}.tar.xz
+      todir: "{{ .xbee.src }}"
 
 build:
   - shell:
       cmds:
         - FORCE_UNSAFE_CONFIGURE=1 ./configure --prefix=/usr
         - make
-        - make install DESTDIR={% xbeeOut %}
-        - make -C doc install-html docdir={% xbeeOut %}/usr/share/doc/tar-1.34
-      directory: "{% xbeeSrc %}/tar-{% version %}"
+        - make install DESTDIR={{ .xbee.out }}
+        - make -C doc install-html docdir={{ .xbee.out }}/usr/share/doc/tar-1.34
+      directory: "{{ .xbee.src }}/tar-{{ .version }}"
 
 
