--- a/xbee-pack.yaml
+++ b/xbee-pack.yaml
@@ -15,9 +15,7 @@ var:
   version: 1.34
 
 provision:
-  - url:
-      from: https://ftp.gnu.org/gnu/tar/tar-{{ .version }}.tar.xz
-      todir: "{{ .xbee.src }}"
+  url: https://ftp.gnu.org/gnu/tar/tar-{{ .version }}.tar.xz
 
 build:
   - shell:
